cmake_minimum_required (VERSION 2.8)
project (kinevox)
enable_testing()
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake/")
INCLUDE(kinevoxconf)
INCLUDE(kinevox)

FindCMAKE(${PROJECT_SOURCE_DIR}/cmake)
FindCMAKE(${PROJECT_SOURCE_DIR}/lib)
FindCMAKE(${PROJECT_SOURCE_DIR}/program)
FindCMAKE(${PROJECT_SOURCE_DIR}/3rdParty)
foreach(p in ${pathList})
	SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${p})
endforeach()

FindCMakeLists(${PROJECT_SOURCE_DIR}/lib)
FindCMakeLists(${PROJECT_SOURCE_DIR}/program)
add_custom_target(build_and_test ${CMAKE_CTEST_COMMAND} -C $(ConfigurationName) --no-label-summary --output-on-failure)
foreach(makefile ${cmakelist})
	add_subdirectory(${makefile}) 
endforeach()
#add_subdirectory(lib/applayer/unittest) 
#add_subdirectory(program/tools/common/unittest) 
